change the width of the heading to prevent horizontal scroll

--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -11,7 +11,7 @@ h1 {
     position: absolute;
     top: 10vh;
     left: 0;
-    width: 100vw;
+    width: 98vw;
 }
 
 h2 {
